force-app/main/default/objects/Ticket__c/fields/Actual_Effort_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Effort_Hours__c</fullName>
    <label>Actual Effort (Hours)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>