force-app/main/default/objects/Ticket__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e410000010cTc</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Admin</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>