force-app/main/default/objects/Ticket__c/fields/Backlog__c.field-meta.xml
<CustomField>
    <fullName>Backlog__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unassigned</fullName>
                <default>true</default>
                <label>Unassigned</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>In Testing</fullName>
            </value>
            <value>
                <fullName>Ready for Production</fullName>
            </value>
            <value>
                <fullName>Waiting On Response</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>