force-app/main/default/objects/Ticket__c/fields/Comments_fro_Assingee__c.field-meta.xml
<CustomField>
    <fullName>Comments_fro_Assingee__c</fullName>
    <label>Comments from Assignee</label>
    <type>TextArea</type>
</CustomField>