force-app/main/default/objects/Ticket__c/fields/How_Does_It_Impact_Your_Work__c.field-meta.xml
<CustomField>
    <fullName>How_Does_It_Impact_Your_Work__c</fullName>
    <label>How Does It Impact Your Work?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOW</fullName>
                <default>true</default>
                <label>LOW</label>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
            </value>
            <value>
                <fullName>HIGH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>