force-app/main/default/objects/Ticket__c/fields/Is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Completed__c</fullName>
    <formula>IF(ISPICKVAL( Backlog__c , &apos;Completed&apos;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>