force-app/main/default/objects/Ticket__c/fields/Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Long_Description__c</fullName>
    <description>Describe the issue with steps to reproduce. Add screenshots as attachments if you can.</description>
    <label>Long Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>