force-app/main/default/objects/Ticket__c/fields/Related_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>