force-app/main/default/objects/Ticket__c/fields/Related_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>