force-app/main/default/objects/Ticket__c/fields/Related_To_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To Enrollment</label>
    <referenceTo>Enrollment__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>