force-app/main/default/objects/Ticket__c/fields/Related_to_Event_Registration__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Event_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to Event Registration</label>
    <referenceTo>Event_Registrations__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>