force-app/main/default/objects/Ticket__c/fields/Related_To_Purchase_History__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Purchase_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To Purchase History</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>