force-app/main/default/objects/Ticket__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <description>In a short sentence, what is the issue?</description>
    <label>Short Description</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>