force-app/main/default/objects/Ticket__c/fields/Ticket_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Closed_Date__c</fullName>
    <label>Ticket Closed Date</label>
    <type>Date</type>
</CustomField>