force-app/main/default/objects/Ticket__c/validationRules/Date_field_Required_to_Close_Ticket.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_field_Required_to_Close_Ticket</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISBLANK(Ticket_Closed_Date__c),
				OR(
				ISPICKVAL(Backlog__c,&quot;Completed&quot;),
				ISPICKVAL(Backlog__c,&quot;Closed&quot;)
								)
)</errorConditionFormula>
    <errorMessage>Close Date Required</errorMessage>
</ValidationRule>