force-app/main/default/objects/Ticket__c/listViews/All_Open.listView-meta.xml
<ListView>
    <fullName>All_Open</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Backlog__c</columns>
    <columns>Short_Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Actual_Effort_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Backlog__c</field>
        <operation>notEqual</operation>
        <value>Closed,Completed</value>
    </filters>
    <label>All Open</label>
</ListView>