force-app/main/default/objects/Ticket__c/listViews/All_OpenPRIOR2ThisYEar.listView-meta.xml
<ListView>
    <fullName>All_OpenPRIOR2ThisYEar</fullName>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>NAME</columns>
    <columns>Backlog__c</columns>
    <columns>Ticket_Closed_Date__c</columns>
    <columns>Short_Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Actual_Effort_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Backlog__c</field>
        <operation>notEqual</operation>
        <value>Closed,Completed</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>1/1/2020 12:00 AM</value>
    </filters>
    <label>All Open - Prior to This Year</label>
</ListView>