force-app/main/default/objects/Ticket__c/listViews/All_Unassigned_Tickets.listView-meta.xml
<ListView>
    <fullName>All_Unassigned_Tickets</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Category__c</columns>
    <columns>Short_Description__c</columns>
    <columns>How_Does_It_Impact_Your_Work__c</columns>
    <columns>Related_to_Account__c</columns>
    <columns>Related_to_Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Related_To_Purchase_History__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Backlog__c</field>
        <operation>equals</operation>
        <value>Unassigned</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
    </filters>
    <label>Unassigned Tickets</label>
</ListView>