force-app/main/default/objects/Ticket__c/listViews/My_tickets2.listView-meta.xml
<ListView>
    <fullName>My_tickets2</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My tickets</label>
</ListView>