force-app/main/default/objects/Ticket__c/listViews/Open_with_Status.listView-meta.xml
<ListView>
    <fullName>Open_with_Status</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Short_Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Long_Description__c</columns>
    <columns>Related_to_Account__c</columns>
    <columns>Related_to_Contact__c</columns>
    <columns>Related_To_Purchase_History__c</columns>
    <columns>Backlog__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Backlog__c</field>
        <operation>notEqual</operation>
        <value>Closed,Completed</value>
    </filters>
    <label>Open with Status</label>
</ListView>