force-app/main/default/objects/Ticket__c/listViews/This_Week.listView-meta.xml
<ListView>
    <fullName>This_Week</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Backlog__c</columns>
    <columns>Short_Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Assigned_To__c</columns>
    <columns>Priority_Score__c</columns>
    <columns>How_Does_It_Impact_Your_Work__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week</label>
</ListView>