force-app/main/default/objects/Ticket__c/listViews/Tickets_from_Mike_Woster.listView-meta.xml
<ListView>
    <fullName>Tickets_from_Mike_Woster</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Backlog__c</columns>
    <columns>Short_Description__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>contains</operation>
        <value>mwos</value>
    </filters>
    <label>Tickets from Mike_Woster</label>
    <sharedTo>
        <roleAndSubordinates>Program_Manager</roleAndSubordinates>
    </sharedTo>
</ListView>